<resources>
    <string name="app_name">SmartTool</string>
    <string name="back_ground_live_channel_des">SmartTool的保活通知，关闭此通知SmartTool将无法正常使用</string>
    <string name="smart_tool_above_ground">SmartTool正在运行</string>
    <string name="low_battery_go_charge">电量过低,赶紧充电</string>
    <string name="low_battery_remind">低电量提醒</string>
    <string name="title_activity_settings">Settings</string>
    <string name="chat_remind">消息提醒</string>
    <string name="vibrate">震动</string>
    <string name="sound">声音</string>
    <string name="chat_remind_des">当超过指定时间未与指定用户聊天时提醒你</string>
    <string name="chat_remind_open_accessibility_service_tips">开启消息提醒需要打开无障碍服务，请在设置中找到SmartTool并打开相应功能</string>
    <string name="tencent_mm_package_name">com.tencent.mm</string>
    <string name="android_setting_package_name">com.android.settings</string>
    <string name="group_name">remind</string>
    <string name="open_accessibility_service">开启辅助服务</string>
    <string name="accessibility_service_has_open">辅助服务已开启</string>
    <string name="remind_mode">提醒方式</string>
    <string name="go_to">前往</string>
    <string name="not_for_the_time_being">暂不</string>

    <!--  Dialog Button Start  -->
    <string name="accessibility_open_dialog_positive_text">@string/go_to</string>
    <string name="accessibility_open_dialog_negative_text">@string/not_for_the_time_being</string>
    <!--  Dialog Button End  -->
    <string-array name="accessibility_service_concerned_pkg_name">
        <item>@string/tencent_mm_package_name</item>
        <item>@string/android_setting_package_name</item>
    </string-array>

    <!--    pref start-->
    <string name="pref_key_open_accessibility_service">@string/open_accessibility_service</string>

    <string name="pref_key_chat_remind">@string/chat_remind</string>
    <string name="pref_title_chat_remind">@string/chat_remind</string>
    <string name="pref_summary_chat_remind">@string/chat_remind_des</string>

    <string name="pref_key_chat_remind_vibrate">@string/vibrate</string>
    <string name="pref_title_chat_remind_vibrate">@string/vibrate</string>

    <string name="pref_key_chat_remind_sound">@string/sound</string>
    <string name="pref_title_chat_remind_sound">@string/sound</string>

    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_low_battery_remind">@string/low_battery_remind</string>
    <string name="pref_title_low_battery_remind">@string/low_battery_remind</string>
    <string name="pref_title_low_battery_remind_mode">@string/remind_mode</string>

    <string-array name="pref_low_battery_remind_mode_titles">
        <item>弹窗提醒</item>
        <item>吐司提醒</item>
    </string-array>
    <string-array name="pref_low_battery_remind_mode_values">
        <item>@string/remind_mode_dialog</item>
        <item>@string/remind_mode_toast</item>
    </string-array>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">震动</string>
    <string name="confrim">确定</string>
    <!--    pref end-->
</resources>
