<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:fragment="com.zhiliang.smarttool.battery.BatteryRemindSettingsActivity$LowBatteryRemindPreferenceFragment"
        app:icon="@drawable/ic_notifications_black_24dp"
        app:key="key_lowPower_remind"
        app:title="@string/pref_header_low_battery_remind" />
    <Preference
        app:fragment="com.zhiliang.smarttool.battery.BatteryRemindSettingsActivity$GeneralPreferenceFragment"
        app:icon="@drawable/ic_notifications_black_24dp"
        app:key="key_lowPower_remind2"
        app:title="@string/pref_header_general" />
    <Preference
        app:fragment="com.zhiliang.smarttool.battery.BatteryRemindSettingsActivity$DataSyncPreferenceFragment"
        app:icon="@drawable/ic_notifications_black_24dp"
        app:key="key_lowPower_remind3"
        app:title="@string/pref_header_data_sync" />
</PreferenceScreen>